fixed an existing bug that is media.inc, for the old alignment variable could be null or empty; changed the background-color to be transparent grey

--- a/web/themes/custom/jcc_components/src/css/image-styles.css
+++ b/web/themes/custom/jcc_components/src/css/image-styles.css
@@ -46,7 +46,7 @@
   width: 80%;
   /*bottom: 5%;*/
   transform: translateX(-50%);
-  background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent background */
+  background-color: rgba(128, 128, 128, 0.25);
   color: white;
   text-align: center;
   padding: 5px;
